Add Twitter Cards

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  <meta property="og:title" content="« S Stewart »">
  <meta property="og:image" content="https://file.house/G7h1.png">
 <meta property="og:description" content="This is a nice website.">
+<meta name="twitter:card" content="summary" />
 <meta name="author" content="S Stewart (xshotD)">
  <title>S Stewart » Home</title>
  </head>
