--- a/index.html
+++ b/index.html
@@ -12,4 +12,29 @@
 <meta name="twitter:card" content="summary" />
 <meta name="author" content="S Stewart (xshotD)">
  <title>S Stewart » Home</title>
- </head>
+ </head> <!-- Uses a header that scrolls with the text, rather than staying
+  locked at the top --> <div class="mdl-layout mdl-js-layout">
+  <header class="mdl-layout__header mdl-layout__header--scroll">
+    <div class="mdl-layout__header-row">
+      <!-- Title -->
+      <span class="mdl-layout-title">Title</span>
+      <!-- Add spacer, to align navigation to the right -->
+      <div class="mdl-layout-spacer"></div>
+      <!-- Navigation -->
+      <nav class="mdl-navigation">
+        <a class="mdl-navigation__link" href="http://f4host.xyz">f4host</a>
+        <a class="mdl-navigation__link" href="https://f4.k.vu">other thing</a>
+        <a class="mdl-navigation__link" href="https://twitter.com/xshot_">twitter</a>
+        <a class="mdl-navigation__link" href="https://github.com/xshotD">github</a>
+      </nav>
+    </div>
+  </header>
+  <div class="mdl-layout__drawer">
+    <span class="mdl-layout-title">Title</span>
+    <nav class="mdl-navigation">
+      <a class="mdl-navigation__link" href="http://f4host.xyz">f4host</a>
+      <a class="mdl-navigation__link" href="https://f4.k.vu">other thing</a>
+      <a class="mdl-navigation__link" href="https://twitter.com/xshot_">twitter</a>
+      <a class="mdl-navigation__link" href="https://github.com/xshotD">github</a>
+    </nav>
+  </div>
