--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <header class="mdl-layout__header mdl-layout__header--scroll">
     <div class="mdl-layout__header-row">
       <!-- Title -->
-      <span class="mdl-layout-title">Title</span>
+      <span class="mdl-layout-title">S Stewart</span>
       <!-- Add spacer, to align navigation to the right -->
       <div class="mdl-layout-spacer"></div>
       <!-- Navigation -->
@@ -30,7 +30,7 @@
     </div>
   </header>
   <div class="mdl-layout__drawer">
-    <span class="mdl-layout-title">Title</span>
+    <span class="mdl-layout-title">S Stewart</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="http://f4host.xyz">f4host</a>
       <a class="mdl-navigation__link" href="https://f4.k.vu">other thing</a>
