--- a/index.html
+++ b/index.html
@@ -38,3 +38,5 @@
       <a class="mdl-navigation__link" href="https://github.com/xshotD">github</a>
     </nav>
   </div>
+ <h1>xshotD</h1>
+ <p>kill me now</p>
