Add DO referral + center

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 <meta name="twitter:card" content="summary" />
 <meta name="author" content="S Stewart (xshotD)">
  <title>S Stewart » Home</title>
+ <style>
+  h1,h2,h3,h4,h5,h6,p,small:
+  text-align: center
+  }
+ </style>
  </head> <!-- Uses a header that scrolls with the text, rather than staying
   locked at the top --> <div class="mdl-layout mdl-js-layout">
   <header class="mdl-layout__header mdl-layout__header--scroll">
@@ -40,3 +45,4 @@
   </div>
  <h1>xshotD</h1>
  <p>kill me now</p>
+ <small>Shameless ad: If you'd like to help me, consider using my <a href="https://m.do.co/c/fb91ca4108f5">Digital Ocean referral</a>.
