--- a/index.html
+++ b/index.html
@@ -50,4 +50,4 @@
   </div>
  <h1>xshotD</h1>
  <p>kill me now</p>
- <small>Shameless ad: If you'd like to help me, consider using my <a href="https://m.do.co/c/fb91ca4108f5">Digital Ocean referral</a>.
+ <small>Shameless ad: If you'd like to help me, consider using my <a href="https://m.do.co/c/fb91ca4108f5">Digital Ocean referral</a>. Or if you don't want cloud computing, use <a href="https://paypal.me/ynapw">my PayPal.me link</a></small>
