--- a/index.html
+++ b/index.html
@@ -51,4 +51,4 @@
   </div>
  <h1>xshotD</h1>
  <p>kill me now</p>
- <smalll><i class="fa fa-cloud" aria-hidden="true"></i><a href="https://m.do.co/c/fb91ca4108f5"></a>. <i class="fa fa-paypal" aria-hidden="true"></i><a href="https://paypal.me/ynapw"></a></small>
+ <smalll><i class="fa fa-cloud" aria-hidden="true"><a href="https://m.do.co/c/fb91ca4108f5"></a></i><i class="fa fa-paypal" aria-hidden="true"><a href="https://paypal.me/ynapw"></a></i><a href="https://paypal.me/ynapw"></a></small>
