--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
  <meta name="description" content="xshotD.github.io. That is what this is. A website, Enjoy.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-light_blue.min.css" />
- <link rel="stylesheet" href="font-awesome.min.css">
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
  <meta property="og:title" content="« S Stewart »">
  <meta property="og:image" content="https://file.house/G7h1.png">
@@ -51,4 +50,4 @@
   </div>
  <h1>xshotD</h1>
  <p>kill me now</p>
- <smalll><a href="https://m.do.co/c/fb91ca4108f5"></a><i class="fa fa-cloud" aria-hidden="true"></i> <a href="https://paypal.me/ynapw"></a><i class="fa fa-paypal" aria-hidden="true"></i><a href="https://paypal.me/ynapw"></a></small>
+  <small>DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
