--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <meta name="author" content="S Stewart (xshotD)">
  <title>S Stewart » Home</title>
  <style>
-  h1,h2,h3,h4,h5,h6,p,small }
+  h1,h2,h3,h4,h5,h6,p,small {
   text-align: center;
   }
-  body }
+  body {
     font-family: 'Roboto', sans-serif;
   }
  </style>
