--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
       <a class="mdl-navigation__link" href="https://github.com/xshotD">github</a>
     </nav>
   </div>
- <h1>xshotD</h1>
- <p>kill me now</p>
+ <h1>Welcome</h1>
+ <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing. For examples of my projects, see my GitHub (in the navbar).</p>
   <small>DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
