The page! It's complete!

--- a/lolbot/success.html
+++ b/lolbot/success.html
@@ -1,1 +1,21 @@
+<html>
+<head>
+<title>Success!</title>
+<style>
+h1,h2,h3,h4,h5,h6,small,p,img }
+	text-align: center;
+}
 
+body }
+font-family: 'Roboto', sans-serif;
+}	
+</style>
+</head>
+<body>
+<img src="ic_done_black_24dp_2x.png" alt="Success"></img>
+<h1>Success</h1>
+<p>lolbot has now been added. Thank you for choosing lolbot!</p>
+<a href="https://www.banne.club"><img src="ic_keyboard_arrow_left_black_24dp_2x.png" alt="Go to banne.club"></a>
+<small>Note that lolbot doesn't do much right now, this is a very simple bot :)</small>
+<small>(c) 2017 S Stewart</small>
+</body>
