--- a/lolbot/success.html
+++ b/lolbot/success.html
@@ -2,9 +2,9 @@
 <head>
 <title>Success!</title>
 <style>
-h1,h2,h3,h4,h5,h6,small,p,img }
-	text-align: center;
-}
+  h1,h2,h3,h4,h5,h6,p,small,img {
+  text-align: center;
+  }
 
 body }
 font-family: 'Roboto', sans-serif;
