--- a/lolbot/success.html
+++ b/lolbot/success.html
@@ -16,6 +16,9 @@ font-family: 'Roboto', sans-serif;
 <h1>Success</h1>
 <p>lolbot has now been added. Thank you for choosing lolbot!</p>
 <a href="https://www.banne.club"><img src="ic_keyboard_arrow_left_black_24dp_2x.png" alt="Go to banne.club"></a>
+<div style="text-align:center">
 <small>Note that lolbot doesn't do much right now, this is a very simple bot :)</small>
+<br/>
 <small>(c) 2017 S Stewart</small>
+</div>
 </body>
