--- a/lolbot/success.html
+++ b/lolbot/success.html
@@ -12,7 +12,7 @@ font-family: 'Roboto', sans-serif;
 </style>
 </head>
 <body>
-<img src="ic_done_black_24dp_2x.png" alt="Success"></img>
+<div style="text-align:center"><img src="ic_done_black_24dp_2x.png" alt="Success"></img></div>
 <h1>Success</h1>
 <p>lolbot has now been added. Thank you for choosing lolbot!</p>
 <div style="text-align:center">
