--- a/index.html
+++ b/index.html
@@ -52,3 +52,4 @@
  <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing. For examples of my projects, see my GitHub (in the navbar).</p>
   <small>DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
   <small>BTC address: 19zxEbD9Jxk5MvpSWkE8e15c98nbdKfvtq</small>
+  <small>Oh, and your banne.</small>
