lolbot: part of the banne network

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-light_blue.min.css" />
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.2/css/bulma.min.css" />
  <meta property="og:title" content="« S Stewart »">
  <meta property="og:image" content="https://file.house/G7h1.png">
 <meta property="og:description" content="This is a nice website.">
@@ -21,7 +22,13 @@
     font-family: 'Roboto', sans-serif;
   }
  </style>
- </head> 
+ </head>
+ <div class="tabs is-centered">
+  <ul>
+  <li class="is-active"><a href="#">Home</a></li>
+  <li><a href="https://lolbot.banne.club">lolbot</a></li> 
+  </ul>
+</div>
  <!-- Uses a header that scrolls with the text, rather than staying locked at the top --> 
  <div class="mdl-layout mdl-js-layout">
   <header class="mdl-layout__header mdl-layout__header--scroll">
