--- a/index.html
+++ b/index.html
@@ -59,4 +59,5 @@
  <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing. For examples of my projects, see my GitHub (in the navbar).</p>
   <small>DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
   <small>BTC address: 19zxEbD9Jxk5MvpSWkE8e15c98nbdKfvtq</small>
+  <small><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#13688a', 'A753OUG');kofiwidget2.draw();</script></small>
   <small>Oh, and your banne.</small>
