donate donate donate (ALSO FIXED SHIT, ENJOY)

--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
       <!-- Navigation -->
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="http://f4host.xyz">f4host</a>
-        <a class="mdl-navigation__link" href="https://f4.k.vu">other thing</a>
+        <a class="mdl-navigation__link" href="https://ko-fi.com/A753OUG">donate</a>
         <a class="mdl-navigation__link" href="https://twitter.com/xshot_">twitter</a>
         <a class="mdl-navigation__link" href="https://github.com/xshotD">github</a>
+        <a class="mdl-navigation__link" href="https://lolbot.banne.club">lolbot</a>
       </nav>
     </div>
   </header>
@@ -50,15 +51,15 @@
     <span class="mdl-layout-title">S Stewart</span>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="http://f4host.xyz">f4host</a>
-      <a class="mdl-navigation__link" href="https://f4.k.vu">other thing</a>
+      <a class="mdl-navigation__link" href='https://ko-fi.com/A753OUG'>donate</a>
       <a class="mdl-navigation__link" href="https://twitter.com/xshot_">twitter</a>
       <a class="mdl-navigation__link" href="https://github.com/xshotD">github</a>
+      <a class="mdl-navigation__link" href="https://lolbot.banne.club">lolbot</a>
     </nav>
   </div>
  <br/>
  <h1>Welcome</h1>
  <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing. For examples of my projects, see my GitHub (in the navbar).</p>
-  <small>DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
+  <small>Alternatives for donations: DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
   <small>BTC address: 19zxEbD9Jxk5MvpSWkE8e15c98nbdKfvtq</small>
-  <small><script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#13688a', 'A753OUG');kofiwidget2.draw();</script></small>
   <small>Oh, and your banne.</small>
