--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <meta charset="utf-8">
  <meta name="description" content="xshotD.github.io. That is what this is. A website, Enjoy.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
+ <script src="https://cdn.jsdelivr.net/wow/1.1.2/wow.min.js"></script>
+ <script>new WOW().init()</script>
  <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.blue-light_blue.min.css" />
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
  <meta property="og:title" content="« S Stewart »">
@@ -51,8 +54,18 @@
     </nav>
   </div>
  <br/>
- <h1>Welcome</h1>
- <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing. For examples of my projects, see my GitHub (in the navbar).</p>
+ <h1 class="wow bounceIn">Welcome</h1>
+ <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing.</p>
+  <br/>
+  <br/>
+  <hr/>
+  <h1 class="wow bounceIn">Projects</h1>
+  <p>I have worked on many projects - check some out here.</p>
+  <br/>
+  <p class="wow flipInX"><a href="https://github.com/xshotD/betteryourdiscord">BetterYourDiscord</a></p>
+  <small>A indev Discord CSS overhaul.</small>
+  <br/>
+  <hr/>
   <small>Alternatives for donations: DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
   <small>BTC address: 19zxEbD9Jxk5MvpSWkE8e15c98nbdKfvtq</small>
   <small>Oh, and your banne.</small>
