--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <a class="mdl-navigation__link" href="https://lolbot.banne.club">lolbot</a>
       </nav>
     </div>
+   </div>
   </header>
   <div class="mdl-layout__drawer">
     <span class="mdl-layout-title">S Stewart</span>
