--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <div class="column wow flipInX"><a href="https://github.com/xshotD/lolbot">lolbot</a><br/><br/><small>The simple onefile bot for everyone</small></div>
    <div class="column wow flipInX"><a href="https://github.com/xshotD/dbot">dbot</a><br/><br/><small>A cool bot with a web server</small></div>
     <div class="column wow flipInX"><a href="https://github.com/xshotD/betteryourdiscord">BetterYourDiscord</a><br/><br/><small>A CSS overhaul for Discord (soon™)</small></div>
-   <div class="column wow flipInX"><b>?</b><small>More projects coming soon™.</small></div>
+   <div class="column wow flipInX"><b>?</b><br/><br/><small>More projects coming soon™.</small></div>
  </div>
 </div>
   <br/>
