--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
  <script src="https://cdn.jsdelivr.net/wow/1.1.2/wow.min.js"></script>
  <script>new WOW().init()</script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
-<script src="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.js"></script>
+<link rel="stylesheet" href="/semantic/dist/semantic.min.css">
+<script src="/semantic/dist/semantic.min.js"></script>
  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
  <meta property="og:title" content="« S Stewart »">
  <meta property="og:image" content="https://file.house/G7h1.png">
@@ -48,13 +48,19 @@
    <div class="column wow flipInX"><a href="https://github.com/xshotD/lolbot">lolbot</a><br/><br/><small>The simple onefile bot for everyone</small></div>
    <div class="column wow flipInX"><a href="https://github.com/xshotD/dbot">dbot</a><br/><br/><small>A cool bot with a web server</small></div>
     <div class="column wow flipInX"><a href="https://github.com/xshotD/betteryourdiscord">BetterYourDiscord</a><br/><br/><small>A CSS overhaul for Discord (soon™)</small></div>
-   <div class="column wow flipInX"><b>?</b><small>More projects coming soon™.</small></div>
+   <div class="column wow flipInX"><b>?</b><br/><br/><small>More projects coming soon™.</small></div>
  </div>
 </div>
   <br/>
   <hr/>
+  <div style="text-align:center;">
   <small>Alternatives for donations: DO link: <a href="https://m.do.co/c/fb91ca4108f5">here.</a> Donate via PayPal.me: <a href="https://paypal.me/ynapw">here.</a></small>
+  <br/>
   <small>BTC address: 19zxEbD9Jxk5MvpSWkE8e15c98nbdKfvtq</small>
-  <small>Oh, and your banne.</small>
+  <br/>
+  <img src="https://cdn.discordapp.com/emojis/282994248742076416.png">
+  <br/>
+  <small><i>banne 2017</i></small>
+  </div>
  </body>
 </html>
