[site, google] add site meta tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <meta name="description" content="xshotD.github.io. That is what this is. A website, Enjoy.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
+<meta name="google-site-verification" content="fmh9HIvrzc5xMv1LMIGFWCtaCG2kTpadCEGaY_sIXNM" />
  <script src="https://cdn.jsdelivr.net/wow/1.1.2/wow.min.js"></script>
  <script>new WOW().init()</script>
 <link rel="stylesheet" href="/semantic/dist/semantic.min.css">
