--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"> 
 <head>
 <meta charset="utf-8">
- <meta name="description" content="xshotD.github.io. That is what this is. A website, Enjoy.">
+ <meta name="description" content="A website, Enjoy.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css">
 <meta name="google-site-verification" content="fmh9HIvrzc5xMv1LMIGFWCtaCG2kTpadCEGaY_sIXNM" />
