Add net neutality warning stuff

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <meta property="og:description" content="This is a nice website.">
 <meta name="twitter:card" content="summary" />
 <meta name="author" content="S Stewart (xshotD)">
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.6/sweetalert2.min.js"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.6.6/sweetalert2.min.css" />
  <title>S Stewart » Home</title>
  <style>
   h1,h2,h3,h4,h5,h6,p,small {
@@ -36,7 +38,14 @@
         <a class="item" href="https://lolbot.banne.club">lolbot</a>
  </div>
   <br/>
- <h1 class="wow bounceIn">Welcome</h1>
+ <script>
+swal(
+  title: '<i>Hey!</i>',
+  html: 'Comcast and other big corps are trying to ruin the net by tarnishing Net Neutrality.\nIf you live in the US this is especially a big deal. If you wanna save our internet - go to <a href="https://battleforthenet.com">battleforthenet.com</a>.\nThanks!',
+  type: 'info'
+)
+</script>
+<h1 class="wow bounceIn">Welcome</h1>
  <p>I'm S Stewart, widely known as lold, F4ncy (on Rizon IRC), imr, xshotD,<br/> and probably some others I'm missing.</p>
   <br/>
   <br/>
