--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	top: -21px;
 	width: 250px;
 	height: 100%;
+	box-shadow: 5px 5px 5px #10aded;
 	border-style: groove;
 	border-width: 8px;
 	border-color: #7298da;
