--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <meta name="twitter:card" content="summary" />
 <meta name="author" content="S Stewart">
 <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/index.min.js"></script>
 <style>
 .sidebar-bg {
 	background-image: url('https://unsplash.it/1360/768?random&blur');
@@ -92,7 +91,8 @@ a:link, a:visited {
 	    <hr/>I also like technology in general and don't go outside too much.</p>
 	    <i>Wanna get in touch? <a href="https://sst8.typeform.com/to/PWJTUp">Fill out this</a></i>
 	    <div class="sidebar-icons">
-		    <p><a href="https://twitter.com/xshot_"><span class="lnr lnr-" </a><a href="https://github.com/tilda">&#xeab0;</a></p>
+		    <p><a href="https://twitter.com/xshot_"<img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
+></a><a href="https://github.com/tilda"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/github.svg" /></a></p>
 	    </div>
 	    </div>
 	  </div>
