--- a/index.html
+++ b/index.html
@@ -91,8 +91,9 @@ a:link, a:visited {
 	    <hr/>I also like technology in general and don't go outside too much.</p>
 	    <i>Wanna get in touch? <a href="https://sst8.typeform.com/to/PWJTUp">Fill out this</a></i>
 	    <div class="sidebar-icons">
-		    <p><a href="https://twitter.com/xshot_"<img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
-></a><a href="https://github.com/tilda"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/github.svg" /></a></p>
+		    <p><a href="https://twitter.com/xshot_"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
+            </a><a href="https://github.com/tilda"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/github.svg" /></a>
+            <a href="javascript:notyf.confirm('Add me: tilde#0031')"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/discord.svg" /></p>
 	    </div>
 	    </div>
 	  </div>
