--- a/index.html
+++ b/index.html
@@ -12,14 +12,6 @@
 <meta name="author" content="S Stewart">
 <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono" rel="stylesheet">
 <style>
-.sidebar-bg {
-	background-image: url('https://unsplash.it/1360/768?random&blur');
-	width: 100%;
-	height: 100%;
-	background-width: 100%;
-	background-height: 100%;
-	background-size: 1000% 1000%;
-}
 .sidebar {
 	position: fixed;
 	height: 150px;
@@ -31,9 +23,11 @@
 	box-shadow: 1px 1px 1px #10aded;
 	border-style: groove;
 	border-width: 8px;
+    background-color: #23272a;
 	border-color: #7298da;
 	font-family: 'Oxygen Mono', monospace;
 }
+
 .sidebar-header {
 	background-color: #2C2F33;
 	height: 45px;
@@ -67,17 +61,20 @@ small {
 .sidebar-icons {
 	text-align: center;
 	margin: 0 auto;
-	color: white;
 }
+
+.svg { filter: invert(100%); }
 
 .notyf {
 	font-family: 'Oxygen Mono', monospace;
+    color: white;
 }
 
 a:link, a:visited {
 	color: #10aded;
 }
 </style>
+<script>var meme = 0;function a(){var meme = 0};function d(){if (meme > 1) { a() };if (meme == 1) { notyf.confirm('Okay! <a style="color:white;" href="https://discord.gg/PEW4wx9">Click here!</a>') } else { notyf.confirm('I\'m tilda#4778 (if you wanna join the Discord server, click again');meme++}}</script>
 <title>tilda's world</title>
 </head>
 <body>
@@ -86,21 +83,20 @@ a:link, a:visited {
 	    <h1>Hey, I'm S</h1>
 	  </div>
 	  <div class="sidebar-body">
-	    <div class="sidebar-bg">
 	    <p>I'm a developer who programs in mostly Python, and sometimes web dev.
 	    <hr/>I also like technology in general and don't go outside too much.</p>
 	    <i>Wanna get in touch? <a href="https://sst8.typeform.com/to/PWJTUp">Fill out this</a></i>
 	    <div class="sidebar-icons">
-		    <p><a href="https://twitter.com/xshot_"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
-            </a><a href="https://github.com/tilda"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/github.svg" /></a>
-            <a href="javascript:notyf.confirm('Add me: tilde#0031')"><img width="32" height="32" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/discord.svg" /></p>
+		    <p><a href="https://twitter.com/xshot_"><img class="svg" width="24" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
+            </a><a href="https://github.com/tilda"><img width="24" class="svg" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/github.svg" /></a>
+            <a href="javascript:d()"><img width="24" class="svg" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/discord.svg" /></a></p>
 	    </div>
 	    </div>
-	  </div>
 	</div>
-	<div class="content">
-		<h1>I make things.</h1>
-		<h4>Like <a href="https://lolbot.banne.club">lolbot</a> and <a href="https://github.com/tilda">other random junk</a></h4><br/>
+	<div class="content" id="c">
+		<h1>Hello!</h1>
+		<h4>Welcome to my website, where I work on things like <a href="https://lolbot.banne.club">lolbot</a> 
+            <br/>and <a href="https://github.com/tilda">other random junk</a></h4><br/>
 		<hr/><h1>I break things.</h1>
 		<h4>Daily, guaranteed, unless I'm not working on something that day <small>almost never happens</small>.</h4>
 		<hr/>
@@ -111,7 +107,7 @@ a:link, a:visited {
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@2.0.1/dist/notyf.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/notyf@2.0.1/dist/notyf.min.js"></script>
 	<script>
-            var notyf = new Notyf()
-	</script>
+        var notyf = new Notyf()
+    </script>
 </body>
 </html>
