fix text going off visible area

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ a:link, a:visited {
 		<h4>Welcome to my website, where I work on things like <a href="https://lolbot.banne.club">lolbot</a> 
             <br/>and <a href="https://github.com/tilda">other random junk</a></h4><br/>
 		<hr/><h1>I break things.</h1>
-		<h4>Just like every other developer, shit happens to me! I break stuff left and right. <small><i>cough</i> see lolbot for example <i>cough</i></small></h4>
+		<h4>Just like every other developer, shit happens to me! I break stuff left and right. <br/><small><i>cough</i> see lolbot for example <i>cough</i></small></h4>
 		<hr/>
 		<small>(c) 2017 S Stewart</small>
 		<small>Licensed under the MIT License</small>
