--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-<meta name="description" content="hey I'm S, this is my website">
+<meta name="description" content="hey I'm S, and this is my website">
 <meta name="google-site-verification" content="fmh9HIvrzc5xMv1LMIGFWCtaCG2kTpadCEGaY_sIXNM" />
 <meta property="og:title" content="hey, I'm S">
 <meta property="og:description" content="and this is my website">
