--- a/index.html
+++ b/index.html
@@ -78,7 +78,11 @@ a:link, a:visited {
 	color: #10aded;
 }
 </style>
-<noscript><div class="no-js-header"><h1><b>NANI??</b></h1><p>This website uses JavaScript wizardry to go smoothly. <a href="http://enable-javascript.com">Enable JavaScript</a> to be happy.</p></div></noscript>
+<noscript>
+	<div class="no-js-header">
+		<h1><b>NANI??</b></h1>
+		<p>This website uses JavaScript wizardry to go smoothly. <a href="http://enable-javascript.com">Enable JavaScript</a> to be happy.</p>
+	</div></noscript>
 <script>var meme = 0;function a(){var meme = 0};function d(){if (meme > 1) { a() };if (meme == 1) { notyf.confirm('Okay! <a style="color:white;" href="https://discord.gg/PEW4wx9">Click here!</a>') } else { notyf.confirm('I\'m tilda#4778 (if you wanna join the Discord server, click again');meme++}}</script>
 <title>tilda's world</title>
 </head>
