--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <div id="deferred-styles">
     <link href="https://fonts.googleapis.com/css?family=Oxygen+Mono" rel="stylesheet">
 </div>
-
 <noscript>
 	<div class="no-js-header">
 		<h1><b>NANI??</b></h1>
 		<p>This website uses JavaScript wizardry to go smoothly. <a href="http://enable-javascript.com">Enable JavaScript</a> to be happy.</p>
 	</div></noscript>
 <title>tilda's world</title>
+	<link href="https://banne.club/css/style.css" rel="stylesheet">
 </head>
 <body>
 	<div class="sidebar">
@@ -31,7 +31,7 @@
 	    <hr/>I also like technology in general and don't go outside too much.</p>
 	    <i>Wanna get in touch? <a href="https://sst8.typeform.com/to/PWJTUp">Fill out this</a></i>
 	    <div class="sidebar-icons">
-		    <p><a href="https://twitter.com/xshot_"><img class="svg" width="24" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
+	   <p><a href="https://twitter.com/xshot_"><img class="svg" width="24" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/twitter.svg" />
             </a><a href="https://github.com/tilda"><img width="24" class="svg" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/github.svg" /></a>
             <a href="javascript:d()"><img width="24" class="svg" height="24" src="https://cdn.jsdelivr.net/npm/simple-icons@1.2.7/icons/discord.svg" /></a></p>
 	    </div>
@@ -50,6 +50,6 @@
 	</div>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@2.0.1/dist/notyf.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/notyf@2.0.1/dist/notyf.min.js"></script>
-       
+       	<script src="https://banne.club/js/thing.js"></script>
 </body>
 </html>
