--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
 	</div>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@2.0.1/dist/notyf.min.css">
 	<script src="https://cdn.jsdelivr.net/npm/notyf@2.0.1/dist/notyf.min.js"></script>
-       	<script src="https://banne.club/js/thing.js"></script>
+    <script src="/js/thing.js"></script>
+	<script type="text/javascript">
+        window._idl = {};
+        _idl.variant = "modal";
+        (function() {
+            var idl = document.createElement('script');
+            idl.async = true;
+            idl.src = 'https://members.internetdefenseleague.org/include/?url=' + (_idl.url || '') + '&campaign=' + (_idl.campaign || '') + '&variant=' + (_idl.variant || 'modal');
+            document.getElementsByTagName('body')[0].appendChild(idl);
+        })();
+    </script>
 </body>
 </html>
