change OGP title

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="description" content="hey I'm S, this is my website">
     <meta name="google-site-verification" content="fmh9HIvrzc5xMv1LMIGFWCtaCG2kTpadCEGaY_sIXNM" />
-    <meta property="og:title" content="hey, I'm S">
-    <meta property="og:description" content="and this is my website">
+    <meta property="og:title" content="hey, I'm tilda">
+    <meta property="og:description" content="want to keep up to date with me? go here.">
     <meta name="twitter:card" content="summary" />
     <meta name="author" content="S Stewart">
     <style>
