fucking small ass

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      /* A sort of "box" to keep content in */
      .box {
          width: 40%;
-         height: 200px;
+         height: 225px;
          margin: auto;
          position: absolute;
          top: 0;
@@ -77,6 +77,8 @@
      .twitter-tag:after { content: "/imtilda"; }
      .patreon-tag:after { content: "/lold"; }
      .reddit-tag:after { content: "/u/RShotZz"; }
+     /* memes */
+     .fuckingsmallass { font-size: 4px; }
     </style>
     <link href="https://use.fontawesome.com/releases/v5.0.1/css/all.css" rel="stylesheet">
     <link href="https://necolas.github.io/normalize.css/7.0.0/normalize.css" rel="stylesheet">
@@ -114,6 +116,9 @@
                 </a>
             </li>
         </ul>
+        <hr/>
+        <small>&copy; current year tilda.</small>
+        <small class="fuckingsmallass">tonkku and oliy</small>
     </div>
 </body>
 </html>
